# qeshet

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
drone_ros_ws/: Dockerfile
drone_ros_ws/src/drone_core/: CMakeLists.txt  coordinate_subscriber.cpp  package.xml
drone_ros_ws/src/drone_core/src/: coordinate_publisher.cpp
