<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_core</name>
  <version>0.0.1</version>
  <description>Nodi C++ core per la navigazione e il controllo reattivo del drone</description>
  
  <maintainer email="stefano.gamba.social@gmail.com">Stefano Gamba</maintainer>
  <license>Apache-2.0</license> <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>